--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Arial';
+    font-family:Arial, Helvetica, sans-serif ;
     background-color: whitesmoke;
     color: rgb(255, 105, 105);
 }
@@ -14,7 +14,8 @@ h1 {
 }
 h2 {
     color: #ec098d;
-    font-size: 2em;
+    background: #F2E6E6;
+    font-size: 3em;
     margin-top: 50px;
     border-bottom: 2px #ec098d dotted;
     overflow: hidden;
@@ -27,8 +28,26 @@ p {
 }
 h3 {
     color: #ec098d;
-    font-size: 2em;
+    background: #F2E6E6;
+    font-size: 3em;
     margin-top: 50px;
     border-bottom: 2px #ec098d dotted;
     overflow: hidden;
+}
+p a {
+    color: #ec098d;
+    text-decoration: none;
+    border-bottom: 1px #ec098d dotted;
+}
+p a:visited {
+    color: blue;
+}
+.sidebar {
+    width: 200px;
+    float: right;
+    background: #ec098d;
+    padding: 25px;
+    margin-left: 15px;
+    margin-top: 50px;
+    color: white;
 }
